--- a/portfolio/templates/add.html
+++ b/portfolio/templates/add.html
@@ -25,7 +25,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <form method="post" action="{{ url_for('add')}}" novalidate>
+        <form method="post" action="{{ url_for(action, id=project_id) }}" novalidate>
           {{ form.csrf_token }} 
           <div>{{ form.title.label(class="form-control-label") }} {{ form.title(class="form-control form-control-lg") }}</div>
           {% for error in form.title.errors: %}
