--- a/portfolio/templates/add.html
+++ b/portfolio/templates/add.html
@@ -14,7 +14,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>New Post</h1>
+            <h1>New Project</h1>
             <span class="subheading">This is a new project!</span>
           </div>
         </div>
