--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -33,20 +33,29 @@
                     <label>7.5</label>
                   <i class="fas fa-star star"></i>
                 </div>
-                <p><a href="{{project.url}}">{{project.url}}</a></p>
+                <p><a href="{{project.url}}" target="_blank" rel="noopener">{{project.url}}</a></p>
                 <p class="overview">
                     {{ project.description }}
                 </p>
-                <a href="{{ url_for('edit', id=project.id) }}" class="button">Edit</a>
-                <a href="{{ url_for('delete',id=project.id)}}" class="button delete-button">Delete</a>
+                <ul class="languages">
+                  {% for language in project.languages: %}
+                    <li>{{ language.name }}</li>
+                  {% endfor %}                  
+                </ul>
+                {% if current_user.is_authenticated: %}
+                  <a href="{{ url_for('edit', id=project.id) }}" class="button">Edit</a>
+                  <a href="{{ url_for('delete',id=project.id)}}" class="button delete-button">Delete</a>
+                {% endif %}
               </div>
           </div>
         </div>
       {% endfor %}
     </div>
-    <div class="container text-center add">
-    <a href="{{ url_for('add')}}" class="button">Add Project</a>
-    </div>
+    {% if current_user.is_authenticated: %}
+      <div class="container text-center add">
+        <a href="{{ url_for('add')}}" class="button">Add Project</a>
+      </div>
+    {% endif %}
   </div>
   <hr>
 
